--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Courier New';
     box-sizing: border-box;
+}
+
+.ascii {
+    font-size: 4pt;
 }
